Normalize color codes in index.css for consistency

--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -3,8 +3,8 @@
   line-height: 1.5;
   font-weight: 400;
   text-align: center;
-  --primary-color: #FB2343;
-  --secondary-color: #1B2F33;
+  --primary-color: #fb2343;
+  --secondary-color: #1b2f33;
 }
 
 body {
