--- a/src/Pages/home/Home.module.css
+++ b/src/Pages/home/Home.module.css
@@ -6,3 +6,14 @@
   align-items: center;
   align-content: stretch;
 }
+
+.containerProductos {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-evenly;
+  align-items: center;
+  align-content: stretch;
+
+  margin-bottom: 20px;
+}
