--- a/src/Components/navbar/Navbar.module.css
+++ b/src/Components/navbar/Navbar.module.css
@@ -5,23 +5,23 @@
   justify-content: space-evenly;
   align-items: center;
   align-content: stretch;
+
+  padding: 36px 0;
 }
 
 .logo {
-  width: 230px;
-  height: 110px;
+  width: 150px;
 }
 
 .links {
   font-weight: 600;
   font-size: 20px;
   line-height: 30px;
-  letter-spacing: 0%;
   text-align: center;
-  vertical-align: middle;
 }
 
 .links a {
+  margin: 0 15px;
   text-decoration: none;
   color: black;
   font-size: 1rem;
@@ -31,7 +31,7 @@
 
 .authButtons {
   display: flex;
-  gap: 10px;
+  gap: 0px;
 }
 
 /* Dropdown */
