--- a/src/Pages/tienda/Shop.module.css
+++ b/src/Pages/tienda/Shop.module.css
@@ -6,3 +6,15 @@
   align-items: stretch;
   align-content: stretch;
 }
+
+.productsSection {
+  padding: 48px 0;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  align-content: stretch;
+  gap: 20px;
+}
