--- a/src/Components/pagination/Pagination.module.css
+++ b/src/Components/pagination/Pagination.module.css
@@ -12,7 +12,8 @@
   padding: 0.5rem 0.9rem;
   border-radius: 8px;
   cursor: pointer;
-  font-weight: 500;
+  font-weight: 600;
+  font-family: "Montserrat", sans-serif;
   transition: all 0.2s ease-in-out;
 }
 
