--- a/src/Pages/producto/Producto.module.css
+++ b/src/Pages/producto/Producto.module.css
@@ -1,3 +1,7 @@
+.productoContainer {
+  padding: 16px 140px;
+}
+
 .banner {
   display: flex;
   flex-direction: row;
@@ -87,5 +91,23 @@ button.addToCartButton {
 
 .bannerRight {
   width: 100%;
+  text-align: left;
+}
+
+.subtitle {
+  margin-bottom: 10px;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 600;
+  font-size: 28px;
+  line-height: 36px;
+  text-align: left;
+}
+
+.categoriaImagen {
+  width: 100%;
+}
+
+.usosContainer {
+  margin: 30px 0;
   text-align: left;
 }
