--- a/src/Components/cart/CartTable.module.css
+++ b/src/Components/cart/CartTable.module.css
@@ -1,6 +1,6 @@
 .container {
   border: 1px solid #d1d5db; /* gris ligero */
-  padding: 16px;
+  padding: 16px 50px;
   border-radius: 8px;
   background-color: white;
 }
@@ -8,6 +8,10 @@
 .table {
   width: 100%;
   border-collapse: collapse;
+  text-align: center;
+}
+
+.table th:first-child {
   text-align: left;
 }
 
@@ -23,7 +27,7 @@
   display: flex;
   align-items: center;
   gap: 8px;
-  padding: 8px 0;
+  padding: 40px 0;
 }
 
 .productImage {
@@ -35,8 +39,14 @@
 
 .quantityCell {
   display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: center;
   align-items: center;
+  align-content: stretch;
   gap: 8px;
+  position: relative;
+  top: -20px;
 }
 
 .quantityButton {
@@ -45,6 +55,16 @@
   border: none;
   border-radius: 4px;
   cursor: pointer;
+}
+
+.quantityInput {
+  width: 50px;
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
+  text-align: center;
+  border: 1px solid #d1d5db;
+  border-radius: 4px;
+  padding: 4px;
 }
 
 .quantityButton:hover {
@@ -58,18 +78,18 @@
 }
 
 .footer {
-  margin-top: 16px;
+  margin-top: 40px;
   display: flex;
-  justify-content: space-between;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: flex-end;
   align-items: center;
-}
-
-.footerButtons {
-  display: flex;
-  gap: 8px;
+  align-content: stretch;
+  gap: 20px;
 }
 
 .btnWhite {
+  font-family: "Poppins", sans-serif;
   padding: 8px 16px;
   border: 1px solid #d1d5db;
   border-radius: 4px;
@@ -82,8 +102,9 @@
 }
 
 .btnBlue {
+  font-family: "Poppins", sans-serif;
   padding: 8px 16px;
-  border: none;
+  border: 1px solid var(--primary-color);
   border-radius: 4px;
   background-color: var(--primary-color);
   color: white;
@@ -91,5 +112,6 @@
 }
 
 .btnBlue:hover {
-  background-color: #2563eb;
+  background-color: white;
+  color: var(--primary-color);
 }
