--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -3,6 +3,8 @@
   text-align: center;
   --primary-color: #fb2343;
   --secondary-color: #1b2f33;
+  --gray-color: #c7c7c728;
+  --white-color: #ffffff;
 }
 
 body {
