--- a/src/Components/login/SideBar.module.css
+++ b/src/Components/login/SideBar.module.css
@@ -1,7 +1,7 @@
 .container {
   width: 100%;
   height: 100vh;
-  padding: 0 80px;
+  padding-left: 80px;
   background-color: var(--secondary-color);
   color: white;
   text-align: left;
