--- a/src/Pages/profile/Profile.module.css
+++ b/src/Pages/profile/Profile.module.css
@@ -17,8 +17,8 @@
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
-  justify-content: baseline;
-  align-items: center;
+  justify-content: space-between;
+  align-items: flex-start;
   align-content: stretch;
   margin: 40px 0;
   padding: 16px 140px;
@@ -30,6 +30,15 @@
 
 .right {
   width: 45%;
+  height: 45vh;
+  padding: 40px;
+  padding-bottom: 14px;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  text-align: left;
+  border: 1px solid #ddd;
+  border-radius: 16px;
 }
 
 .title {
@@ -39,7 +48,7 @@
 }
 
 .personal {
-  margin: 20px 0;
+  margin-bottom: 20px;
   padding: 40px;
   padding-bottom: 14px;
   display: flex;
