--- a/src/Pages/profile/Profile.module.css
+++ b/src/Pages/profile/Profile.module.css
@@ -112,3 +112,49 @@
 .phone {
   margin-bottom: 20px;
 }
+
+.table {
+  width: 100%;
+  border-collapse: separate; /* para que se vea más espacioso */
+  border-spacing: 0 20px; /* espacio entre filas */
+  font-family: "Montserrat", sans-serif;
+  font-size: 14px;
+}
+
+.table th {
+  color: #333;
+  font-weight: 600;
+  padding-left: 12px;
+  text-align: left;
+}
+
+.table td {
+  padding: 8px 20px;
+  text-align: left;
+}
+
+.estado {
+  font-weight: bold;
+  border-radius: 4px;
+  text-align: center;
+}
+
+.sinAtender {
+  color: #d9e004;
+  background-color: #d9e0042e; /* naranja */
+}
+
+.enviada {
+  color: #01d20c;
+  background-color: #01d20c2e; /* azul */
+}
+
+.cerrada {
+  color: #931919;
+  background-color: #9319192e; /* verde */
+}
+
+.desconocido {
+  color: #ffffff;
+  background-color: #7f8c8d; /* gris */
+}
