--- a/src/Pages/cotizacion/Cotizacion.module.css
+++ b/src/Pages/cotizacion/Cotizacion.module.css
@@ -19,9 +19,9 @@
 }
 
 .card {
+  height: 200px;
   margin-bottom: 20px;
   padding: 40px;
-  padding-bottom: 14px;
   display: flex;
   flex-direction: column;
   gap: 16px;
@@ -31,7 +31,57 @@
 }
 
 .title {
+  margin-bottom: 20px;
   color: var(--primary-color);
-  font-weight: 600;
   font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+  font-style: Bold;
+  font-size: 20px;
+}
+.titlePDF {
+  color: var(--primary-color);
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+  font-style: Bold;
+  font-size: 20px;
+}
+
+.rowcontent {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;
+  align-content: stretch;
+}
+
+.label {
+  width: 50%;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+  font-style: Regular;
+  font-size: 16px;
+}
+
+.value {
+  width: 50%;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 600;
+  font-style: SemiBold;
+  font-size: 16px;
+}
+
+.pdfButton {
+  margin-right: 10px;
+  padding: 10px 20px;
+  background-color: white;
+  color: var(--primary-color);
+  border: 1px solid var(--primary-color);
+  border-radius: 8px;
+  cursor: pointer;
+}
+
+.pdfButton:hover {
+  background-color: var(--primary-color);
+  color: white;
 }
