--- a/src/Components/table/DashboardTable.module.css
+++ b/src/Components/table/DashboardTable.module.css
@@ -66,3 +66,9 @@
 .actionButton:hover {
   transform: scale(1.1);
 }
+
+.pagination {
+  margin: 16px;
+  display: flex;
+  justify-content: flex-end;
+}
