--- a/src/Components/dashboard/SideBarDashboard.module.css
+++ b/src/Components/dashboard/SideBarDashboard.module.css
@@ -1,5 +1,5 @@
 .sidebar {
-  width: 250px;
+  width: 200px;
   height: 100vh;
   background-color: var(--secondary-color);
   color: #fff;
@@ -33,18 +33,23 @@
 }
 
 .userIcon {
-  width: 28px;
-  height: 28px;
+  width: 40px;
+  height: 40px;
+  margin-right: 8px;
 }
 
 .userName {
   font-size: 0.95rem;
   font-weight: bold;
+  margin: 0;
+  text-align: left;
+  text-transform: capitalize;
 }
 
 .userRole {
   font-size: 0.8rem;
   color: #cce3de;
+  text-align: left;
 }
 
 .menu {
