Refactor Navbar component: encapsulate user buttons in a userSection for improved layout

--- a/src/Components/navbar/Navbar.module.css
+++ b/src/Components/navbar/Navbar.module.css
@@ -87,3 +87,10 @@
 .dropdown:hover .dropdownContent {
   display: block;
 }
+
+
+.userSection {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
