--- a/src/Pages/dashboard/principal/Dashboard.module.css
+++ b/src/Pages/dashboard/principal/Dashboard.module.css
@@ -195,3 +195,12 @@
   font-weight: bold;
   color: var(--primary-color);
 }
+
+/* Grafico de barras */
+.graphic .chart {
+  flex: 1;
+  margin-top: 10px;
+  background: #f8f9fa;
+  border-radius: 8px;
+  padding: 10px;
+}
