--- a/src/Pages/dashboard/productodetail/ProductoDetalle.module.css
+++ b/src/Pages/dashboard/productodetail/ProductoDetalle.module.css
@@ -3,7 +3,6 @@
   flex-direction: column;
   gap: 20px;
   padding: 20px;
-  background: #f5f5f5;
   border-radius: 12px;
 }
 
@@ -64,6 +63,7 @@
 
 /* Contenido principal */
 .content {
+  margin-top: 40px;
   display: flex;
   gap: 20px;
   flex-wrap: wrap;
@@ -71,28 +71,56 @@
 
 /* Columna izquierda */
 .left {
-  flex: 2;
+  flex: 1;
   display: flex;
   flex-direction: column;
   gap: 20px;
 }
 
-/* Datos básicos */
-.datos {
-  background: #fff;
-  padding: 16px;
-  border-radius: 12px;
-  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.05);
-  min-height: 100px;
+.card {
+  margin-bottom: 20px;
+  padding: 40px;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  text-align: left;
+  border: 1px solid #ddd;
+  border-radius: 16px;
+  background-color: white;
 }
 
-/* Detalles adicionales */
-.detalles {
-  background: #fff;
-  padding: 16px;
-  border-radius: 12px;
-  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.05);
-  min-height: 150px;
+.subtitle {
+  margin-bottom: 20px;
+  color: var(--primary-color);
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+  font-style: Bold;
+  font-size: 20px;
+}
+
+.infoRow {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;
+  align-content: stretch;
+}
+
+.label {
+  width: 50%;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+  font-style: Regular;
+  font-size: 16px;
+}
+
+.value {
+  width: 50%;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 600;
+  font-style: SemiBold;
+  font-size: 16px;
 }
 
 /* Columna derecha */
@@ -105,7 +133,7 @@
 
 .productImage {
   width: 100%;
-  max-width: 300px;
+  /* max-width: 300px; */
   border-radius: 12px;
   object-fit: contain;
   background: #fff;
