feat: add back button to Cotizacion component for navigation

--- a/src/Pages/cotizacion/Cotizacion.module.css
+++ b/src/Pages/cotizacion/Cotizacion.module.css
@@ -138,3 +138,9 @@
 .desconocido {
   color: #ffffff;
 }
+
+.backContainer {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 40px;
+}
