--- a/src/Pages/dashboard/perfil/DashboardPerfil.module.css
+++ b/src/Pages/dashboard/perfil/DashboardPerfil.module.css
@@ -177,3 +177,12 @@
   color: var(--primary-color);
   white-space: nowrap;
 }
+
+.buttonsGrid {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  align-content: stretch;
+}
