--- a/src/Components/dashboard/buttoncard/ButtonCard.module.css
+++ b/src/Components/dashboard/buttoncard/ButtonCard.module.css
@@ -2,7 +2,8 @@
   width: 100%;
   height: 120px;
   border-radius: 16px;
-  border: 1.5px solid #0f172a1a;
+  border-width: 1.5px;
+  border-style: solid;
   background-color: white;
   display: flex;
   flex-direction: column;
@@ -13,6 +14,7 @@
   transition: transform 0.15s ease, box-shadow 0.15s ease;
   text-decoration: none;
   color: inherit;
+  font-family: "Montserrat", sans-serif;
 }
 
 .card:hover {
