--- a/src/Components/dashboard/buttoncard/ButtonCard.module.css
+++ b/src/Components/dashboard/buttoncard/ButtonCard.module.css
@@ -29,6 +29,7 @@
 }
 
 .text {
-  font-size: 15px;
-  font-weight: 500;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 600;
+  font-size: 10px;
 }
