feat: add Contact page with WhatsApp and email details, and update styles for better layout

--- a/src/Pages/landing/preguntas_frecuentes/Questions_frecuenly.module.css
+++ b/src/Pages/landing/preguntas_frecuentes/Questions_frecuenly.module.css
@@ -28,6 +28,13 @@
 	gap: 1.5rem;
 }
 
+a.linkWhatsapp {
+	color: #25d366;
+	text-decoration: none;
+	font-weight: 600;
+	font-weight: 800;
+}
+
 @media (min-width: 768px) {
 	.questionsGrid {
 		grid-template-columns: repeat(2, 1fr);
