Adding the functionality to edit and add a product, where the product service file was modified to add the logic for post and put requests. The image service was also added, where the logic for posting to the database is located. Modals were added with the forms for the corresponding fields. The corresponding design was also added according to Figma.

--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -7,6 +7,8 @@
   --secondary-color-dark: #1b2f3378;
   --gray-color: #c7c7c728;
   --white-color: #ffffff;
+  --placeholder-color: #aaaaaa;
+  --border-input-color: #dddddd;
 }
 
 body {
