--- a/src/Pages/dashboard/productos/Productos.module.css
+++ b/src/Pages/dashboard/productos/Productos.module.css
@@ -26,7 +26,7 @@
   padding: 8px 16px;
   border: 2px solid var(--secondary-color);
   border-radius: 6px;
-  background-color: #fff;
+  background-color: var(--white-color);
   font-weight: 600;
   color: var(--secondary-color);
 }
@@ -39,8 +39,43 @@
   color: #444;
 }
 
-/* Botón de agregar */
+.tableContainer {
+  margin: 0 40px 40px 40px;
+}
+
+/*Modal styles*/
+.modalOverlay {
+  position: fixed;
+  inset: 0;
+  background: rgba(0, 0, 0, 0.45);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.modalContent {
+  background: #fff;
+  padding: 2rem;
+  border-radius: 8px;
+  width: 1300px;
+}
+
+/* Estilos para las acciones del modal */
+
+.modalActions {
+  display: flex;
+  justify-content: center;
+  flex-direction: row-reverse;
+  gap: 1rem;
+  margin-top: 1rem;
+}
+
+.modalActions button {
+  font-size: 1rem;
+}
+/* Botones */
 .addButton {
+  flex: 1;
   height: 45px;
   background-color: var(--primary-color);
   font-family: "Poppins", sans-serif;
@@ -49,15 +84,229 @@
   border: 2px solid var(--primary-color);
   border-radius: 6px;
   padding: 8px 16px;
-  cursor: pointer;
   transition: background-color 0.2s ease;
+  cursor: pointer;
 }
 
 .addButton:hover {
-  background-color: white;
+  background: var(--white-color);
   color: var(--primary-color);
 }
 
-.tableContainer {
-  margin: 0 40px 40px 40px;
+.cancelButton {
+  flex: 1;
+  height: 45px;
+  background-color: var(--secondary-color);
+  font-family: "Poppins", sans-serif;
+  color: #fff;
+  font-weight: 600;
+  border: 2px solid var(--secondary-color);
+  border-radius: 6px;
+  padding: 8px 16px;
+  transition: background-color 0.2s ease;
+  cursor: pointer;
+}
+
+.cancelButton:hover {
+  background: var(--white-color);
+  color: var(--secondary-color);
+}
+/* Estilos para las filas del formulario */
+
+.formRow {
+  display: flex;
+  flex-direction: row;
+  padding: 0px 60px;
+  gap: 3rem; 
+  align-items: start;
+}
+.imagenSection {
+  flex: 1;
+  gap: 0.5rem;
+}
+.imagenSection h3 {
+  font-size: 1.5rem;
+  color: var(--secondary-color);
+  font-weight: 600;
+  font-family: "Poppins", sans-serif;
+  text-align: start;
+}
+.datosSection {
+  flex: 2;
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+}
+
+/* Estilos para la sección de imagen */
+.fileInput {
+  display: none;
+}
+
+/* Área de arrastre */
+.dropZone {
+  width: 450px;
+  height: 450px;
+  border: 2px dashed var(--secondary-color-dark);
+  border-radius: 16px;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  cursor: pointer;
+  background-color: var(--gray-color);
+  color: var(--secondary-color);
+  transition: border-color 0.3s ease, background-color 0.3s ease;
+  margin-bottom: 20px;
+}
+
+.dropZone:hover {
+  background-color: var(--white-color);
+  border-color: var(--secondary-color);
+}
+.dropZoneActive {
+  background-color: var(--white-color);
+  border-color: var(--secondary-color);
+  transition: border-color 0.3s ease, background-color 0.3s ease;
+}
+
+.uploadIcon{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.5rem;
+  color: var(--secondary-color);
+}
+.uploadIcon img{
+  width: 100px;
+  height: 100px;
+}
+.uploadIcon p{
+  margin: 0;
+  margin-top: 0.5rem;
+  font-size: 1.5rem;
+}
+.uploadIcon label{
+  color: var(--secondary-color-dark);
+  font-size: 1rem;
+  cursor: pointer;
+}
+
+.previewImage {
+  width: 90%;
+  height: 90%;
+  object-fit: cover;
+  border-radius: 8px;
+}
+
+/* Botón img */
+.fileLabel {
+  display: inline-block;
+  width: 400px;
+  margin-top: 1rem;
+  padding: 0.75rem 1.5rem;
+  background-color: var(--secondary-color);
+  color: white;
+  border-radius: 6px;
+  cursor: pointer;
+  font-weight: 600;
+  text-align: center;
+  transition: background-color 0.2s ease;
+}
+
+.fileLabel:hover {
+  background-color: var(--secondary-color-dark);
+}
+.fileLabel img{
+  width: 30px;
+  height: 30px;
+  margin-right: 8px;
+  vertical-align: middle;
+}
+/* Estilos Inputs,Select y textarea */
+
+
+.datosSection h3 {
+  margin-bottom: 0.5rem;
+  font-size: 1.5rem;
+  color: var(--secondary-color);
+  font-weight: 600;
+  font-family: "Poppins", sans-serif;
+  text-align: start;
+}
+
+/* Labels */
+.datosSection label {
+  display: flex;
+  flex-direction: column;
+  text-align: start;
+  font-size: 1rem;
+  font-weight: 500;
+  color: var(--secondary-color);
+  font-family: "Poppins", sans-serif;
+}
+
+/* Inputs y selects */
+.datosSection input,
+.datosSection select {
+  margin-top: 0.3rem;
+  padding: 10px;
+  border: 2px solid var(--border-input-color);
+  border-radius: 8px;
+  background-color: var(--gray-color);
+  width: 100%;
+  box-sizing: border-box;
+  font-size: 1rem;
+  font-family: "Poppins", sans-serif;
+  outline: none;
+  transition: all 0.25s ease;
+}
+
+/* Hover / focus */
+.datosSection input:focus,
+.datosSection select:focus {
+  border-color: var(--secondary-color);
+  background-color: var(--white-color);
+  box-shadow: 0 0 0 3px rgba(30, 136, 229, 0.15);
+}
+.datosSection textarea {
+  margin-top: 0.3rem;
+  padding: 10px 12px;
+  border: 2px solid var(--border-input-color);
+  box-sizing: border-box;
+  border-radius: 8px;
+  background-color: var(--gray-color);
+  width: 100%;
+  min-height: 120px;
+  resize: none;
+  font-size: 1rem;
+  font-family: "Poppins", sans-serif;
+  outline: none;
+  transition: all 0.25s ease;
+}
+
+.datosSection textarea:focus {
+  border-color: var(--secondary-color);
+  background-color: var(--white-color);
+  box-shadow: 0 0 0 3px rgba(30, 136, 229, 0.15);
+}
+
+/* Placeholder */
+.datosSection input::placeholder {
+  color: var(--placeholder-color);
+}
+.datosSection textarea::placeholder {
+  color: var(--placeholder-color);
+}
+
+/* Select */
+.datosSection select {  
+  appearance: none;
+  /*Icon de la flechita*/
+  background-image: url("data:image/svg+xml,%3Csvg width='14' height='10' viewBox='0 0 14 10' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M1 1l6 6 6-6' stroke='%23999' stroke-width='2' fill='none'/%3E%3C/svg%3E");
+  background-repeat: no-repeat;
+  background-position: right 1rem center;
+  background-size: 16px;
+  cursor: pointer;
 }
