refactor: replace Link with button for category items to improve click handling

--- a/src/Components/shop/sidebar/Sidebar.module.css
+++ b/src/Components/shop/sidebar/Sidebar.module.css
@@ -38,6 +38,9 @@
   color: #464646;
   font-weight: 400;
   font-size: 14px;
+
+  border: none;
+  background-color: white;
 }
 
 .categoryItem:hover {
