--- a/src/Components/dropdown/DropdownProfile.module.css
+++ b/src/Components/dropdown/DropdownProfile.module.css
@@ -31,7 +31,7 @@
   width: 2rem;
   height: 2rem;
   border-radius: 50%;
-  background-color: #3b82f6;
+  background-color: var(--secondary-color);
   color: white;
   display: flex;
   justify-content: center;
@@ -41,7 +41,7 @@
 
 .userName {
   font-size: 16px;
-  color: #374151;
+  color: var(--secondary-color);
 }
 
 .chevron {
@@ -96,6 +96,7 @@
 
 .logout {
   color: var(--primary-color);
+  cursor: pointer;
 }
 
 .logout:hover {
