--- a/src/Components/dropdown/DropdownProfile.module.css
+++ b/src/Components/dropdown/DropdownProfile.module.css
@@ -5,8 +5,8 @@
 .dropdownButton {
   display: flex;
   align-items: center;
-  gap: 0.5rem;
-  padding: 0.5rem 1rem;
+  gap: 0.4rem;
+  padding: 0.5rem 1.5rem;
   border-radius: 0.5rem;
   background-color: white;
   border: 1px solid #e2e8f0;
@@ -31,7 +31,7 @@
   width: 2rem;
   height: 2rem;
   border-radius: 50%;
-  background-color: var(--secondary-color);
+  background-color: var(--primary-color);
   color: white;
   display: flex;
   justify-content: center;
