--- a/src/Pages/dashboard/categorias/Categorias.module.css
+++ b/src/Pages/dashboard/categorias/Categorias.module.css
@@ -9,8 +9,11 @@
 
 .dashboardHeader {
   display: flex;
-  justify-content: space-between;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-evenly;
   align-items: center;
+  align-content: stretch;
   margin: 40px;
 }
 
@@ -19,6 +22,10 @@
   font-weight: 600;
   font-style: SemiBold;
   font-size: 24px;
+}
+
+.searchBarContainer {
+  width: 440px;
 }
 
 /* Título estilo "botón" con línea roja */
