--- a/src/Pages/dashboard/productos/Productos.module.css
+++ b/src/Pages/dashboard/productos/Productos.module.css
@@ -21,6 +21,10 @@
   font-size: 24px;
 }
 
+.searchBarContainer {
+  width: 440px;
+}
+
 /* Título estilo "botón" con línea roja */
 .totalProducts {
   padding: 8px 16px;
