feat: implement search functionality in Cotizaciones component with debounce support

--- a/src/Pages/dashboard/cotizaciones/Cotizaciones.module.css
+++ b/src/Pages/dashboard/cotizaciones/Cotizaciones.module.css
@@ -21,6 +21,10 @@
   font-size: 24px;
 }
 
+.searchBarContainer {
+  width: 540px;
+}
+
 /* Título estilo "botón" con línea roja */
 .totalProducts {
   padding: 8px 16px;
