--- a/src/Components/dropdown/DropdownProfile.module.css
+++ b/src/Components/dropdown/DropdownProfile.module.css
@@ -41,18 +41,8 @@
 
 .userName {
   font-size: 16px;
+  font-weight: 500;
   color: var(--secondary-color);
-}
-
-.chevron {
-  width: 1rem;
-  height: 1rem;
-  color: #6b7280;
-  transition: transform 0.2s;
-}
-
-.rotate {
-  transform: rotate(180deg);
 }
 
 .dropdownMenu {
