feat: add chevron icon to dropdown button for better visual indication

--- a/src/Components/dropdown/DropdownProfile.module.css
+++ b/src/Components/dropdown/DropdownProfile.module.css
@@ -45,6 +45,10 @@
   color: var(--secondary-color);
 }
 
+.chevron {
+  margin-left: 0.25rem;
+}
+
 .dropdownMenu {
   position: absolute;
   right: 0;
