--- a/src/Pages/cart/checkout/Checkout.module.css
+++ b/src/Pages/cart/checkout/Checkout.module.css
@@ -1,5 +1,5 @@
 .container {
-  padding: 16px 140px;
+  padding-bottom: 40px;
 }
 
 .description {
@@ -66,6 +66,7 @@
   border: 1px solid #d0d0d0;
   border-radius: 6px;
   font-size: 14px;
+  font-family: "Montserrat", sans-serif;
 }
 
 .select {
@@ -78,6 +79,7 @@
   background-color: #fff;
   color: #333;
   cursor: pointer;
+  font-family: "Montserrat", sans-serif;
 }
 
 .select:focus {
@@ -99,16 +101,25 @@
   font-size: 14px;
   min-height: 80px;
   resize: vertical;
+  font-family: "Montserrat", sans-serif;
 }
 
 .checkboxContainer {
   display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
   align-items: center;
+  align-content: stretch;
   margin-bottom: 20px;
 }
 
 .checkboxContainer input[type="checkbox"] {
   margin-right: 8px;
+}
+
+.terms {
+  display: inline-block;
 }
 
 .checkboxContainer a {
@@ -128,6 +139,7 @@
   cursor: pointer;
   width: 100%;
   transition: background-color 0.2s ease;
+  font-family: "Montserrat", sans-serif;
 }
 
 .button:hover {
