refactor: add styling for productosGrid layout in ProductosSugeridos component

--- a/src/Components/shop/ProductosSugeridos/ProductosSugeridos.module.css
+++ b/src/Components/shop/ProductosSugeridos/ProductosSugeridos.module.css
@@ -10,3 +10,15 @@
   line-height: 36px;
   text-align: left;
 }
+
+.productosGrid {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;
+  align-content: stretch;
+  gap: 40px;
+
+  margin: 40px 0px;
+}
