--- a/src/Components/banner/Banner.module.css
+++ b/src/Components/banner/Banner.module.css
@@ -1,10 +1,11 @@
 .title {
-  padding: 20px 0;
-  color: white;
-  background-color: var(--secondary-color);
-
-  font-family: "Montserrat", sans-serif;
-  font-weight: 100;
-  font-size: 28px;
+  padding: 24px 155px;
   text-align: center;
+  background-color: var(--secondary-color);
+  color: white;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 300;
+  font-style: SemiBold;
+  font-size: 24px;
+  line-height: 60px;
 }
