--- a/src/Components/landing/Libro_reclamaciones/FormLibro.module.css
+++ b/src/Components/landing/Libro_reclamaciones/FormLibro.module.css
@@ -2,7 +2,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
   margin: auto;
   margin-top: 40px;
   margin-bottom: 40px;
@@ -11,6 +10,7 @@
   background-color: var(--gray-color);
   padding: 10px 50px 0px 50px;
   border-radius: 15px;
+  width: 50%;
 }
 .containerFormulario h3 {
   font-size: 2rem;
