--- a/src/Pages/landing/home/Home.module.css
+++ b/src/Pages/landing/home/Home.module.css
@@ -2,18 +2,21 @@
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
-  justify-content: space-evenly;
   align-items: center;
-  align-content: stretch;
+  justify-content: center;
+  gap: 60px;
+  margin-top: 60px;
+  margin-bottom: 60px;
 }
 
 .containerProductos {
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
-  justify-content: space-evenly;
   align-items: center;
-  align-content: stretch;
+  justify-content: center;
+  gap: 60px;
+  margin-top: 60px;
+  margin-bottom: 60px;
 
-  margin-bottom: 20px;
 }
