--- a/src/Pages/auth/login/Login.module.css
+++ b/src/Pages/auth/login/Login.module.css
@@ -10,20 +10,19 @@
 }
 
 .left {
-  width: 50%;
+  flex: 1;
   height: 100vh;
 }
 
 .right {
-  width: 50%;
-  padding: 0 80px 0 160px;
-
+  flex: 1;
   display: flex;
   flex-direction: column;
+  padding: 0 80px 0 160px;
   flex-wrap: nowrap;
   justify-content: center;
   align-items: stretch;
-  align-content: stretch;
+  max-width: 600px;
 }
 
 .loginTitle {
