--- a/src/Pages/auth/register/Register.module.css
+++ b/src/Pages/auth/register/Register.module.css
@@ -10,14 +10,14 @@
 }
 
 .left {
-  width: 50%;
+  flex: 1;
   height: 100vh;
 }
 
 .right {
-  width: 50%;
+  flex: 1;
+  max-width: 600px;
   padding: 0 80px 0 160px;
-
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
