--- a/src/Pages/dashboard/productos/Productos.module.css
+++ b/src/Pages/dashboard/productos/Productos.module.css
@@ -27,9 +27,12 @@
 
 /* Título estilo "botón" con línea roja */
 .totalProducts {
+  display: flex;
+  gap: 10px;
   padding: 8px 16px;
   border: 2px solid var(--secondary-color);
   border-radius: 6px;
+  align-items: center;
   background-color: var(--white-color);
   font-weight: 600;
   color: var(--secondary-color);
@@ -64,3 +67,8 @@
   background: var(--white-color);
   color: var(--primary-color);
 }
+
+.productIcon {
+  filter: brightness(0) saturate(100%) invert(18%) sepia(9%) saturate(1260%) hue-rotate(137deg) brightness(93%) contrast(89%);
+}
+
