--- a/src/Pages/dashboard/usuarios/Usuarios.module.css
+++ b/src/Pages/dashboard/usuarios/Usuarios.module.css
@@ -23,6 +23,8 @@
 
 /* Título estilo "botón" con línea roja */
 .totalProducts {
+  display: flex;
+  gap: 10px;
   padding: 8px 16px;
   border: 2px solid var(--secondary-color);
   border-radius: 6px;
@@ -60,4 +62,8 @@
 
 .tableContainer {
   margin: 0 40px 40px 40px;
+}
+.usuarioIcon {
+  filter: brightness(0) saturate(100%) invert(18%) sepia(9%) saturate(1260%)
+    hue-rotate(137deg) brightness(93%) contrast(89%);
 }
